# pythonpractice2

./: add.py  collection.py  dict.py  dunder.py  enter_exit.py  filecreation.py  generator.py  iterator.py  iterratorInterable.py  list_tuple.py  my_file.txt  set.py  sorting.py  sot_list(tuple).py  task.py
package_new/new_package/: pyproject.toml  test1.py
package_new/new_package/new_package/: module1.py  module2.py  module3.py
package_new/package_practice/package_practice_kaviyav/: check1.py
package_new/package_practice/package_practice_kaviyav.egg-info/: PKG-INFO  SOURCES.txt
