[project]
name = "new-package"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "package-practice-kaviyav (>=0.2,<0.3)"

]

[tool.poetry]
packages = [{include = "new_package"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
